Bug 248205 - Checked chunks line displays uncorrectly.
Summary: Checked chunks line displays uncorrectly.
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 252169 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-18 05:10 UTC by Fest
Modified: 2010-11-08 20:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fest 2010-08-18 05:10:31 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux

After finishing download, "checked chunks" line appears. And small left aligned copy in upper corner of main window too.

I don't how to describe it better, so here screenshot: http://img444.imageshack.us/img444/5056/ktorrent.png

Mostly it happens if download finished in second tab, or if you must to scroll to see it in same tab.

Reproducible: Always

Steps to Reproduce:
1. Create few groups/tabs.
2. Started to download more torrents, than can be see on without scrolling down.
3. Finish downloads in few groups/tabs

Actual Results:  
Duplicate of "checked chunks" line appears.

Expected Results:  
No duplicate.
Comment 1 Joris Guisson 2010-08-18 18:17:53 UTC
It appears that if you scroll with the scan extender shown, you get this effect.
Comment 2 Fest 2010-08-18 18:26:28 UTC
What is scan extender ? Bottom panels ?
Comment 3 Joris Guisson 2010-08-18 19:52:53 UTC
I have named all widgets which can appear in the torrent list, extenders. The scan extenders is the one shown when you do a data scan.
Comment 4 Fest 2010-08-18 20:05:22 UTC
I'm not sure about this ("if you scroll with the scan extender shown").
I see them already when open ktorrent with finished downloads. 
Instead, when i scroll down to finished download or open tab with finished download this duplicate scan extender gone.
Comment 5 Alexey Shildyakov 2010-09-03 20:11:57 UTC
Confirm this.
This happens if KTorrent was miminized in systray. And if I restore it, I see this. And as describes abobve if start scrolling it's gone.
Version 4.0.3
Comment 6 Joris Guisson 2010-09-23 22:31:41 UTC
*** Bug 252169 has been marked as a duplicate of this bug. ***
Comment 7 Joris Guisson 2010-11-08 19:25:05 UTC
Doesn't seem to be reproducible with Qt 4.7, IMHO this is a Qt issue. Closing as upstream bug.
Comment 8 Fest 2010-11-08 19:26:46 UTC
I'm sorry but i have qt 4.7  and bug is still here.
Comment 9 Joris Guisson 2010-11-08 20:03:53 UTC
SVN commit 1194336 by guisson:

Fix bug causing extenders to be shown when the torrent is hidden 

BUG: 248205

 M  +1 -0      ChangeLog  
 M  +8 -0      ktorrent/view/view.cpp  
 M  +3 -0      ktorrent/view/view.h  
 M  +1 -1      ktorrent/view/viewmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1194336