Fix bug causing extenders to be shown when the torrent is hidden

BUG: 248205

svn path=/trunk/extragear/network/ktorrent/; revision=1194336